{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 81,
  "lineage": "75514eeb-b2f5-435b-ac59-7aa6bad9d22d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01f7631c2c4e83d1b",
            "domain": "vpc",
            "id": "eipalloc-079aa636d26f40a36",
            "network_interface": "eni-06144f8c922c69a53",
            "private_dns": "ip-10-0-3-5.eu-west-1.compute.internal",
            "private_ip": "10.0.3.5",
            "public_dns": "ec2-52-18-252-120.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.252.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0706fe19b07ec008e",
            "owner_id": "861019856428",
            "tags": {
              "Name": "terraform_igw"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079aa636d26f40a36",
            "id": "nat-0fc9a2ee2c99ec28c",
            "network_interface_id": "eni-06144f8c922c69a53",
            "private_ip": "10.0.3.5",
            "public_ip": "52.18.252.120",
            "subnet_id": "subnet-0772561c89c00b1e3",
            "tags": {
              "name": "terraform_natgw"
            }
          },
          "depends_on": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_igw",
            "aws_subnet.terraform-subnet-private-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dfa7b768844ff5d5",
            "owner_id": "861019856428",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0fc9a2ee2c99ec28c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_rt"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_nat_gateway.terraform_natgw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce2179c2a9e0e94d",
            "owner_id": "861019856428",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0706fe19b07ec008e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_rt"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_rt_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb17154179cd14e3",
            "route_table_id": "rtb-0ce2179c2a9e0e94d",
            "subnet_id": "subnet-0e5bead7a2a36cd1b"
          },
          "depends_on": [
            "aws_route_table.terraform_public_rt",
            "aws_subnet.terraform-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_rt_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c89fdd55a728154",
            "route_table_id": "rtb-0ce2179c2a9e0e94d",
            "subnet_id": "subnet-0e665bc3ad6a017ae"
          },
          "depends_on": [
            "aws_route_table.terraform_public_rt",
            "aws_subnet.terraform-subnet-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:861019856428:subnet/subnet-0772561c89c00b1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/26",
            "id": "subnet-0772561c89c00b1e3",
            "map_public_ip_on_launch": false,
            "owner_id": "861019856428",
            "tags": {
              "Name": "subnet-private-1"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:861019856428:subnet/subnet-0a946bf63f37bcba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/26",
            "id": "subnet-0a946bf63f37bcba0",
            "map_public_ip_on_launch": false,
            "owner_id": "861019856428",
            "tags": {
              "Name": "subnet-private-4"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:861019856428:subnet/subnet-0e5bead7a2a36cd1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/26",
            "id": "subnet-0e5bead7a2a36cd1b",
            "map_public_ip_on_launch": true,
            "owner_id": "861019856428",
            "tags": {
              "Name": "subnet-public-1"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-subnet-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:861019856428:subnet/subnet-0e665bc3ad6a017ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/26",
            "id": "subnet-0e665bc3ad6a017ae",
            "map_public_ip_on_launch": true,
            "owner_id": "861019856428",
            "tags": {
              "Name": "subnet-public-2"
            },
            "vpc_id": "vpc-0be91233f878d1646"
          },
          "depends_on": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:861019856428:vpc/vpc-0be91233f878d1646",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008a6a4342c50f5db",
            "default_route_table_id": "rtb-056b9a1d0793ac5ef",
            "default_security_group_id": "sg-0c406512031d80d49",
            "dhcp_options_id": "dopt-76e19c11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0be91233f878d1646",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056b9a1d0793ac5ef",
            "owner_id": "861019856428",
            "tags": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}